--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>Uutispeli - Sarakepulmapeli</title>
-  <link rel="stylesheet" href="styles-fi.css">
+  <link rel="stylesheet" href="styles2.css">
 </head>
 <body>
   <div class="category-selector">
