Replace script source from scripts-fi.js to scripts2.js

--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
 
   <div id="message" class="error"></div>
 
-  <script src="scripts-fi.js"></script>
+  <script src="scripts2.js"></script>
 </body>
 </html>
