--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>Uutispeli - Sarakepulmapeli</title>
-  <link rel="stylesheet" href="styles2.css">
+  <link rel="stylesheet" href="styles-fi.css">
 </head>
 <body>
   <div class="category-selector">
@@ -13,8 +13,6 @@
     <select id="categorySelect">
       <option value="all">Kaikki</option>
       <option value="tuoreimmat">Tuoreimmat</option>
-      <option value="kotimaa">Kotimaa</option>
-      <option value="ulkomaat">Ulkomaat</option>
       <option value="talous">Talous</option>
       <option value="urheilu">Urheilu</option>
     </select>
@@ -34,6 +32,6 @@
 
   <div id="message" class="error"></div>
 
-  <script src="scripts2.js"></script>
+  <script src="scripts-fi.js"></script>
 </body>
 </html>
